--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
-djangorestframework
-psycopg2
-pyyaml
-uritemplate
+Django==4.1.4
+django_rest_knox==4.2.0
+django_url_filter==0.3.15
+djangorestframework==3.14.0
+knox==0.1.14
+
+psycopg2==2.9.5
+pyyaml==6.0
+uritemplate==4.1.1
