--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-Django==4.1.4
+Django==4.1.5
 django_rest_knox==4.2.0
+django-guardian==2.4.0
 django_url_filter==0.3.15
 djangorestframework==3.14.0
 knox==0.1.14
