Add psycopg2-binary as a dependency.
  - This is required for talking to postgresql, so all tests need it.

--- a/tox.ini
+++ b/tox.ini
@@ -33,12 +33,11 @@ deps =
     Pillow
     SQLAlchemy
     mongoengine
+    psycopg2-binary
     django22: Django>=2.2,<2.3
     django32: Django>=3.2,<3.3
     django40: Django>=4.0,<4.1
     django41: Django>=4.1,<4.2
-    py{37,38,39,310,311}-django{22,32,41}: psycopg2-binary
-    py{py3}-django{22,32,41}: psycopg2cffi
 
 
 allowlist_externals = pytest
