--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -11,6 +11,7 @@ jobs:
       fail-fast: false 
       matrix:
         python-version: ['3.8', '3.9', '3.10', '3.11']
+        python-version: ['3.10']
 
     services:
       postgres:
@@ -26,11 +27,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-#    - name: Set up Python 3.10
+    - name: Set up Python 3.10
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
-#        python-version: "3.10"
+        python-version: "3.10"
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
