--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -11,7 +11,7 @@ jobs:
       fail-fast: false 
       matrix:
         python-version: ['3.8', '3.9', '3.10', '3.11']
-        python-version: ['3.10']
+#        python-version: ['3.10']
 
     services:
       postgres:
@@ -26,12 +26,12 @@ jobs:
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
     steps:
-    - uses: actions/checkout@v1
-    - name: Set up Python 3.10
+    - uses: actions/checkout@v3
+#    - name: Set up Python 3.10
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v4
       with:
-        python-version: "3.10"
+#        python-version: "3.10"
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
