--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -33,17 +33,19 @@ jobs:
       with:
 #        python-version: "3.10"
         python-version: ${{ matrix.python-version }}
-    - name: Install tox-gh
-      run: python -m pip install tox-gh
-    - name: Setup test suite
-      run: tox4 r -vv --notest
-    - name: Run test suite
-      run: tox4 r --skip-pkg-install
-      env:
-        PYTEST_ADDOPTS: "-vv --durations=10"
-#    - name: Install dependencies
-#      run: |
-#        python -m pip install --upgrade pip
-#        python -m pip install tox tox-gh-actions
-#    - name: Test with tox
-#      run: tox -vvvv
+#    - name: Install tox-gh
+#      run: python -m pip install tox-gh
+#    - name: Setup test suite
+#      run: tox4 r -vv --notest
+#    - name: Run test suite
+#      run: tox4 r --skip-pkg-install
+#      env:
+#        PYTEST_ADDOPTS: "-vv --durations=10"
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install tox tox-gh-actions
+    - name: Test tox itself
+      run: tox -r -vv --notest
+    - name: Test with tox
+      run: tox r -vvvv 
