More fiddling with a dev environment.

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,4 +26,8 @@ include_package_data = true
 packages = find:
 python_requires = >=3.8
 install_requires =
-    Django >= 4.1  # Replace "X.Y" as appropriate
+    Django >= 3.2  # Replace "X.Y" as appropriate
+
+[flake8]
+max-line-length = 99
+exclude = hubuum/migrations
