--- a/tox.ini
+++ b/tox.ini
@@ -2,9 +2,11 @@
 minversion = 1.9
 envlist =
     format
+    flake8
     python{38,39,310}-django32
     python{38,39,310,311}-django40
     python{38,310,311}-django41
+
 #    docs
 #    examples
 #    linkcheck
@@ -23,6 +25,17 @@ description = install black in a virtual environment and invoke it on the curren
 deps = black
 skip_install = true
 commands = black .
+
+[testenv:flake8]
+skip_install = true
+deps =
+    flake8
+    flake8-bugbear
+    flake8-docstrings>=1.3.1
+    flake8-typing-imports>=1.1
+    pep8-naming
+commands =
+    flake8 hubuum/ hubuumsite/
 
 [testenv]
 setenv = DJANGO_SETTINGS_MODULE=hubuumsite.settings
