--- a/tox.ini
+++ b/tox.ini
@@ -47,6 +47,7 @@ deps =
     SQLAlchemy
     mongoengine
     psycopg2-binary
+    pytest
     django22: Django>=2.2,<2.3
     django32: Django>=3.2,<3.3
     django40: Django>=4.0,<4.1
