--- a/tox.ini
+++ b/tox.ini
@@ -56,7 +56,7 @@ deps =
 
 allowlist_externals = pytest
 python_files = tests.py test_*.py *_tests.py
-commands = {toxinidir}/hubuum/tests.py
+commands = pytest {toxinidir}/hubuum/tests.py
 
 #[testenv:docs]
 #extras = doc
