Test-deps as a file of its own.

--- a/tox.ini
+++ b/tox.ini
@@ -43,11 +43,7 @@ setenv = DJANGO_SETTINGS_MODULE=hubuumsite.settings
 passenv = HUBUUM_*
 
 deps =
-    Pillow
-    SQLAlchemy
-    mongoengine
-    psycopg2-binary
-    pytest
+    -r{toxinidir}/requirements-test.txt
     django22: Django>=2.2,<2.3
     django32: Django>=3.2,<3.3
     django40: Django>=4.0,<4.1
