Add pytest-django to assist pytest...

--- a/tox.ini
+++ b/tox.ini
@@ -38,7 +38,7 @@ commands =
     flake8 hubuum/ hubuumsite/
 
 [testenv]
-setenv = DJANGO_SETTINGS_MODULE={toxinidir}/hubuumsite.settings
+setenv = DJANGO_SETTINGS_MODULE=hubuumsite.settings
 
 passenv = HUBUUM_*
 
