Pass environments to tox...

--- a/tox.ini
+++ b/tox.ini
@@ -40,7 +40,7 @@ commands =
 [testenv]
 setenv = DJANGO_SETTINGS_MODULE=hubuumsite.settings
 
-passenv = HUBUUM_*
+passenv = HUBUUM_*, GITHUB_*
 
 deps =
     -r{toxinidir}/requirements-test.txt
