fix: Migrate to a fork of django-url-filter.
BREAKING CHANGE: Drops support for python<3.9

  - django-url-filter hasn't been updated since 2018 and lacks support for
django>4: https://github.com/miki725/django-url-filter/issues/113.
  - A fork exists: https://github.com/enjoy2000/django-url-filter
    (dj-url-filter on pypi).

This commit migrates to using this fork.

--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,9 +1,10 @@
 Django>3
 django_rest_knox
 django-guardian
-django_url_filter
+dj_url_filter
 djangorestframework
 knox
+six
 
 psycopg2-binary
 pyyaml
