--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 Django>3
 django_rest_knox==4.2.0
 django-guardian==2.4.0
-django_url_filter==0.3.15
+dj_url_filter==0.4.4
 djangorestframework==3.14.0
 knox==0.1.14
+six
 
 psycopg2==2.9.5
 pyyaml==6.0
