Update tox.ini to drop python3.8.

--- a/tox.ini
+++ b/tox.ini
@@ -52,7 +52,7 @@ deps =
 
 allowlist_externals = pytest
 # python_files = test/*.py
-commands = pytest {toxinidir}/hubuum/tests/
+commands = pytest {toxinidir}/hubuum/tests/ {toxinidir}/hubuum/api/v1/tests/
 
 #[testenv:docs]
 #extras = doc
