--- a/.github/workflows/coveralls.yml
+++ b/.github/workflows/coveralls.yml
@@ -17,14 +17,14 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-#      - name: Cache pip
-#        uses: actions/cache@v2
-#        with:
-#          path: ~/.cache/pip
-#          key: v1-pip-${{ runner.os }}-${{ matrix.python-version }}
-#          restore-keys: |
-#            v1-pip-${{ runner.os }}
-#            v1-pip-
+      - name: Cache pip
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: v1-pip-${{ runner.os }}-${{ matrix.python-version }}
+          restore-keys: |
+            v1-pip-${{ runner.os }}
+            v1-pip-
       - name: Install Python
         uses: actions/setup-python@v3
         with:
