--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -6,6 +6,7 @@ on:
 
 jobs:
   build:
+    name: tox
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false 
@@ -70,7 +71,7 @@ jobs:
   coveralls:
     if: ${{ github.event_name == 'pull_request' || github.repository == 'terjekv/hubuum' }}
     name: Coveralls
-    needs: test
+    needs: tox
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
