--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -45,9 +45,9 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install tox tox-gh-actions
-      - name: Test tox itself
-        run: tox -r --notest
+          python -m pip install -r requirements-test.txt
+#      - name: Test tox itself
+#        run: tox -r --notest
       - name: Test with tox
         run: tox r
       - name: Check migrations
