--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -45,6 +45,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          python -m pip install tox tox-gh-actions
           python -m pip install -r requirements-test.txt
 #      - name: Test tox itself
 #        run: tox -r --notest
