Add testing against Django 4.2 prereleases. Fixes #33

--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,7 @@ envlist =
     python{39,310}-django32
     python{39,310,311}-django40
     python{310,311}-django41
+    python{310,311}-django42
 
 #    docs
 #    examples
@@ -48,6 +49,7 @@ deps =
     django32: Django>=3.2,<3.3
     django40: Django>=4.0,<4.1
     django41: Django>=4.1,<4.2
+    django42: Django>=4.2.a1,<4.3
 
 
 allowlist_externals = pytest
