ci: isort support. Fixes #35

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,3 +19,7 @@ jobs:
           exclude: "hubuum/migrations"
           max-line-length: "99"
           plugins: "flake8-bugbear flake8-black"
+      - name: isort
+        uses: isort/isort-action@v1.0.0
+        with:
+            requirements-files: "requirements.txt requirements-test.txt requirements-dev.txt"
