--- a/tox.ini
+++ b/tox.ini
@@ -23,9 +23,13 @@ python =
 
 [testenv:format]
 description = install black in a virtual environment and invoke it on the current folder
-deps = black
+deps = 
+    black
+    isort
 skip_install = true
-commands = black .
+commands =
+    black .
+    isort --check hubuum hubuumsite
 
 [testenv:flake8]
 skip_install = true
