--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,7 @@ minversion = 1.9
 envlist =
     format
     flake8
+    coverage
     python{39,310}-django32
     python{39,310,311}-django40
     python{310,311}-django41
@@ -22,17 +23,21 @@ python =
     3.11: python311
 
 [testenv:format]
-description = install black in a virtual environment and invoke it on the current folder
+description = Invoke black, isort, and pylint on the project.
 deps = 
+    -r{toxinidir}/requirements-test.txt
+allowlist_externals =
     black
     isort
-skip_install = true
+    pylint
 commands =
     black .
     isort --check hubuum hubuumsite
+    pylint --recursive=y hubuum hubuumsite --load-plugins=pylint_django 
 
 [testenv:flake8]
 skip_install = true
+description = Invoke flake8 on the project.
 deps =
     flake8
     flake8-bugbear
@@ -71,6 +76,7 @@ deps =
 
 commands =
     coverage run --source hubuum --module pytest hubuum
+allowlist_externals = coverage
 
 #[testenv:docs]
 #extras = doc
