--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -62,6 +62,8 @@ jobs:
         run: python manage.py generateschema > openapi.yml
       - name: Pylint
         run: pylint --recursive=y hubuum hubuumsite --load-plugins=pylint_django
+        env:
+          DJANGO_SETTINGS_MODULE=hubuumsite.settings
       - name: Test coverage
         run: coverage run manage.py test -v2
       - name: Upload OpenAPI schema
