--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,6 +1,7 @@
 name: flake8
 
-on: [push, pull_request]
+on:
+  - "push"
 
 jobs:
   flake8-lint:
@@ -22,4 +23,4 @@ jobs:
       - name: isort
         uses: isort/isort-action@v1.0.0
         with:
-            requirements-files: "requirements.txt requirements-test.txt requirements-dev.txt"
+          requirements-files: "requirements.txt requirements-test.txt requirements-dev.txt"
