--- a/setup.cfg
+++ b/setup.cfg
@@ -8,6 +8,7 @@ author = Terje Kvernes
 author_email = terje@kvernes.no
 license = CC0 1.0
 classifiers =
+    Development Status :: 2 - Pre-Alpha  
     Environment :: Web Environment
     Framework :: Django
     Framework :: Django :: 4.1  # Replace "X.Y" as appropriate
@@ -17,14 +18,14 @@ classifiers =
     Programming Language :: Python
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3 :: Only
-    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
     Topic :: Internet :: WWW/HTTP
     Topic :: Internet :: WWW/HTTP :: Dynamic Content
 
 [options]
 include_package_data = true
 packages = find:
-python_requires = >=3.8
+python_requires = >=3.9
 install_requires =
     Django >= 3.2  # Replace "X.Y" as appropriate
 
